# libquiche

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  sources.cmake  vcpkg.json
platform/quiche_platform_impl_vcpkg/: quiche_bug_tracker_impl.h  quiche_client_stats_impl.h  quiche_command_line_flags_impl.h  quiche_containers_impl.h  quiche_event_loop_impl.h  quiche_export_impl.h  quiche_flag_utils_impl.h  quiche_flags_impl.h  quiche_googleurl_impl.h  quiche_iovec_impl.h  quiche_logging_impl.h  quiche_server_stats_impl.h  quiche_stack_trace_impl.h  quiche_stream_buffer_allocator_impl.h  quiche_time_utils_impl.h
ports/abseil-cpp/: portfile.cmake  vcpkg.json
ports/boringssl/: portfile.cmake  vcpkg.json
ports/protobuf/: portfile.cmake  vcpkg.json
ports/quiche/: portfile.cmake  vcpkg.json
ports/zlib/: portfile.cmake  vcpkg.json
versions/: baseline.json
versions/a-/: abseil-cpp.json
versions/b-/: boringssl.json
versions/p-/: protobuf.json
versions/q-/: quiche.json
versions/z-/: zlib.json
